# FBXLoader

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Dependencies/glm/glm/: CMakeLists.txt  common.hpp  exponential.hpp  ext.hpp  fwd.hpp  geometric.hpp  glm.hpp  integer.hpp  mat2x2.hpp  mat2x3.hpp  mat2x4.hpp  mat3x2.hpp  mat3x3.hpp  mat3x4.hpp  mat4x2.hpp  mat4x3.hpp  mat4x4.hpp  matrix.hpp  packing.hpp  trigonometric.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vector_relational.hpp
Dependencies/glm/glm/detail/: _noise.hpp  func_matrix.hpp  func_matrix.inl  func_packing.inl  type_mat2x2.hpp  type_mat2x3.hpp  type_mat2x4.hpp  type_mat3x2.hpp  type_mat3x3.hpp  type_mat3x4.hpp  type_mat4x2.hpp  type_mat4x3.hpp  type_mat4x4.hpp  type_vec1.hpp
Dependencies/glm/glm/gtc/: bitfield.hpp  constants.hpp  epsilon.inl  matrix_integer.hpp  matrix_inverse.hpp  matrix_transform.hpp  matrix_transform.inl  noise.hpp  packing.inl  quaternion.hpp  quaternion.inl  random.hpp  random.inl  reciprocal.inl  round.hpp  type_precision.hpp  type_ptr.hpp  vec1.hpp
Dependencies/glm/glm/gtx/: associated_min_max.hpp  closest_point.hpp  color_space.hpp  color_space_YCoCg.hpp  common.hpp  compatibility.hpp  dual_quaternion.hpp  dual_quaternion.inl  euler_angles.hpp  extend.hpp  extented_min_max.hpp  fast_exponential.hpp  fast_square_root.hpp  gradient_paint.hpp  handed_coordinate_space.hpp  integer.hpp  intersect.hpp  (+36 more)
samples/: ThirdPersonWalk.FBX
src/: EsgiShader.cpp  EsgiShader.h  FBXLoader.h  main.cpp  mat4.h
src/shaders/: basic.fs  basic.vs  basicParticle.cs  basicParticle.fs  basicParticle.vs
